deployment-rollingupdate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  namespace: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
      version: dev
  minReadySeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: nginx
        version: dev
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        resources:
         requests:
           memory: "512M"
           cpu: "250m"
         limits:
           memory: "1G"
           cpu: "500m"
        livenessProbe:
         httpGet:
           path: /
           port: 80
