pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: test
  labels:
    app: nginx
    version: dev
spec:
  containers:
  - name: server
    image: nginx:latest
