pvc-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx-deploy
  namespace: test
spec:
  replicas: 1
  serviceName: nginx
  selector:
    matchLabels:
      app: nginx
      version: dev
  template:
    metadata:
      labels:
        app: nginx
        version: dev
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        livenessProbe:
          httpGet:
            path: /
            port: 80
        volumeMounts:
          - name: data
            mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: nginx-pvc
