secret-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: dev
  template:
    metadata:
      labels:
        app: nginx
        version: dev
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
        - name: nginx-scret
          mountPath: "/config"
          readOnly: true
      volumes:
        - name: nginx-scret
          secret:
            secretName: nginx-scret
            items:
            - key: "nginx_color.properties"
              path: "nginx_color.properties"
